--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -1,9 +1,17 @@
 #!/usr/bin/env bash
+# vim: filetype=sh
 
 install_brew() {
     if !command -v brew &>/dev/null; then
         /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
     fi
+}
+
+install_asdf_plugins() {
+    asdf plugin-add nodejs https://github.com/asdf-vm/asdf-nodejs.git
+    asdf plugin-add direnv
+    asdf install direnv latest
+    asdf global direnv latest
 }
 
 {{ if eq .chezmoi.os "darwin" -}}
@@ -18,23 +26,16 @@ macos_configure_zsh_path() {
 }
 {{ end -}}
 
-# TODO: configure your own repeat-rate settings
-# configure_keyboard_repeat_rate() {
-# {{ if (and (eq .chezmoi.os "linux") (eq .chezmoi.osRelease.id "ubuntu")) }}
-#     gsettings set org.gnome.desktop.peripherals.keyboard repeat-interval 12
-#     gsettings set org.gnome.desktop.peripherals.keyboard delay 172
-# {{ else if eq .chezmoi.os "darwin" -}}
-#     defaults write NSGlobalDomain KeyRepeat -int 1
-#     defaults write -g InitialKeyRepeat -int 13
-# {{ end -}}
-# }
-#
-# configure_keyboard_repeat_rate
-
 install_brew
 brew bundle --global
 
 {{ if (and (eq .chezmoi.os "linux") (eq .chezmoi.osRelease.id "ubuntu")) }}
+
+# dependencies for vim YouCompleteMe
+sudo apt install vim-gtk3 mono-complete default-jdk
+
+# dependencies for asdf-nodejs
+sudo apt install dirmngr
 
 # DISCUSS: Hopefully this installs Hack, but if this script runs
 # before provisioning then it won't be effective. Also not sure if
@@ -56,3 +57,5 @@ brew install emacs-head@28 \
 macos_configure_zsh_path
 
 {{ end }}
+
+install_asdf_plugins
