--- a/run_once_after_30-install-emacs.sh.tmpl
+++ b/run_once_after_30-install-emacs.sh.tmpl
@@ -13,18 +13,18 @@ xargs -a ~/.local/share/chezmoi/apt-packages-for-emacs.txt sudo apt -y install
 
 # Instructions from
 # https://masteringemacs.org/article/speed-up-emacs-libjansson-native-elisp-compilation
-if ! -f /usr/local/bin/emacs; then
-  DEBIAN_FRONTEND=noninteractive sudo apt build-dep -y emacs-lucid
-  mkdir -p "${HOME}/workspace/scratch"
+if ! command -v emacs &>/dev/null; then
+  DEBIAN_FRONTEND=noninteractive
+  sudo apt build-dep -y emacs-lucid
+  [ -d "${HOME}/workspace/scratch" ] || mkdir -p "${HOME}/workspace/scratch"
   pushd "${HOME}/workspace/scratch"
   git clone git://git.savannah.gnu.org/emacs.git
+  trap 'rm "${HOME}/workspace/scratch/emacs"' EXIT
   cd emacs || exit 1
   ./autogen.sh
   CC="gcc-10" ./configure --with-native-compilation --with-modules=yes --with-mailutils --with-x=yes --with-x-toolkit=lucid 'CFLAGS=-g -fstack-protector-strong -Wformat -Werror=format-security -O3 -mtune=native -march=native -fomit-frame-pointer' --with-jpeg --with-png --with-rsvg --with-tiff --with-wide-int --with-xft --with-xml2 --with-xpm prefix=/usr/local --with-cairo --with-gnutls --without-gconf --without-xwidgets --without-toolkit-scroll-bars --without-gsettings --with-imagemagick
   make -j$(nproc)
   sudo make install
-  popd &>/dev/null
-  rm -rf "${HOME}/workspace/scratch/emacs"
 fi
 
 {{ end -}}
