--- a/dot_wakatime.cfg.tmpl
+++ b/dot_wakatime.cfg.tmpl
@@ -13,7 +13,7 @@ offline = true
 # proxy = https://user:pass@localhost:8080
 no_ssl_verify = false
 timeout = 30
-hostname = {{ .hostname }}
+hostname = {{ .chezmoi.hostname }}
 
 [git]
 disable_submodules = false
