--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -1,8 +1,7 @@
 #!/usr/bin/env bash
-# vim: filetype=sh
 
 install_brew() {
-    if !command -v brew &>/dev/null; then
+    if ! command -v brew &>/dev/null; then
         /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
     fi
 }
@@ -58,4 +57,4 @@ macos_configure_zsh_path
 
 {{ end }}
 
-install_asdf_plugins
+# install_asdf_plugins
